--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="js/vendor/nouislider/nouislider.css">
   <script src="js/vendor/pristine.min.js"></script>
+  <script src="js/vendor/nouislider/nouislider.js"></script>
   <script src="js/main.js" type="module"></script>
   <title>Кекстаграм</title>
 </head>
